# brique.rs

./: .gitignore  .~lock.test_data.csv#  Cargo.toml  README.md  doc_test.md  expected_params.csv  test_data.csv  test_sheet.ods  testing_data.csv
.github/workflows/: rust.yml
benches/: bench_data.csv  matrix_benches.rs  model_benches.rs
examples/: mnist.rs  spiral.rs
src/: activation.rs  benchmark.rs  checkpoint.rs  config.rs  draw_spiral.rs  layers.rs  lib.rs  log_into_csv.rs  loss.rs  main.rs  matrice.rs  matrix.rs  model.rs  model_builder.rs  optimizer.rs  parse_test_csv.rs  save_load.rs  spiral.rs  tests.rs  utils.rs
tests/: tests.rs
tests/test_data/: adam_test.csv  adam_test_sheet.ods  add_values_of_a_row_test.csv  div_two_matrices_test.csv  doc_test.md  dot_product_test.csv  expected_params.csv  normalize_test.csv  sqrt_test.csv  test_input_weights.csv  test_sheet.ods
