[package]
name = "brique"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5" 

[[bench]]
name = "matrix_benches"
harness = false

[lib]
name = "brique"
path = "src/lib.rs"
