[package]
name = "brique"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9"
rand_distr = "0.5.0"

[dev-dependencies]
criterion = "0.5" 

[[example]]
name = "mnist"

[[bench]]
name = "matrix_benches"
harness = false

[[bench]]
name = "model_benches"
harness = false

[lib]
name = "brique"
path = "src/lib.rs"
bench = false
