[package]
name = "brique"
version = "0.2.1"
author = "Alexis Aoun"
description = "A MLP library made from scratch, using the rust standard lib"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9"
rand_distr = "0.5.0"

[[example]]
name = "mnist"

[[example]]
name = "spiral"

[lib]
name = "brique"
path = "src/lib.rs"
bench = false
